<resources>
    <string name="app_name">CS Words App</string>
    <string name="registration_btn">Реєстрація</string>
    <string name="main_btn">Розпочати</string>
    <string name="login_google_btn">Увійти через Google</string>
    <string name="sign_out">Вийти</string>

    <string name="description">Додаток, що стане твоїм найкращим помічником при вивченні слів англійської мови</string>
    <string name="descriptionLogin">Готові вивчати Англійську мову?</string>
    <string name="descriptionRegistration">Реєстрація нового користувача у системі</string>
    <string name="bottom_line">Створено групою студентів КН | 2021</string>

    <string name="email">Email</string>
    <string name="name">Ім\'я</string>
    <string name="surname">Прізвище</string>
    <string name="password">Пароль</string>
    <string name="passwordConfirmation">Підтвердження паролю</string>
    <string name="lostPassword">Забули пароль?</string>
    <string name="haveAccount">Вже маєте аккаунт?</string>

    <string name="network_error">Помилка. Перевірте підключення до Internet та спробуйте пізніше.</string>
    <string name="google_login_error">Помилка авторизації. Перевірте ваше з\'єднання</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>

    <string name="necessary_word_alert">Слово та його переклад є обов\'язковими полями.</string>
    <string name="save_word_success">Слово успішно збережено!</string>


    <string name="word_example">Приклад використання</string>
    <string name="word_translation">Переклад</string>
    <string name="word">Слово</string>
    <string name="word_save_btn">Додати слово</string>

    <string name="notification_inactive_title">Тебе довго не було!</string>
    <string name="notification_inactive_context">Можливо, саме час зайнятись англійською? :)</string>

    <string name="remind_title_hint">Заголовок нагадування</string>
    <string name="remind_message_hint">Повідомлення нагадування</string>

    <string name="remind_default_title">Привітик!</string>
    <string name="remind_default_message">Саме час зайнятися вивченням англійської мови!</string>

    <string name="title_activity_rules">RulesActivity</string>
    <string name="tab_text_1">Артикль</string>
    <string name="tab_text_2">Іменник</string>
    <string name="tab_text_3">Прикметник</string>
    <string name="tab_text_4">Прислівник</string>
    <string name="tab_text_5">Дієслово</string>
    <string name="tab_text_6">Умовні речення</string>



</resources>