<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/main_header_selector"
    android:orientation="vertical">

  <ImageView
      android:id="@+id/logoMain"
      android:layout_width="match_parent"
      android:layout_height="300dp"
      android:layout_marginTop="40dp"
      android:paddingTop="70dp"
      app:srcCompat="@drawable/icon" />

  <TextView
      android:id="@+id/headerMain"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/app_name"
      android:textAlignment="center"
      android:textAllCaps="true"
      android:textColor="@color/white"
      android:textSize="34sp"
      android:textStyle="bold" />

  <TextView
      android:id="@+id/descriptionMain"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="60dp"
      android:layout_marginTop="18dp"
      android:layout_marginRight="60dp"
      android:text="@string/description"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="19sp"
      android:textStyle="bold" />

  <Button
      android:id="@+id/loginButtonMain"

      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      android:layout_marginLeft="64dp"
      android:layout_marginTop="52dp"
      android:layout_marginRight="64dp"

      android:background="@drawable/custom_button"

      android:padding="8sp"
      android:text="@string/main_btn"
      android:textColor="@color/white"
      android:textSize="22sp"
      android:textStyle="bold"
      />

  <Button
      android:visibility="invisible"
      android:id="@+id/registrationButtonMain"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="64dp"
      android:layout_marginTop="24dp"
      android:layout_marginRight="64dp"
      android:background="@drawable/custom_button"
      android:text="@string/registration_btn"
      android:textColor="@color/white"
      android:textSize="18sp"
      android:textStyle="bold" />

  <TextView
      android:id="@+id/bottomLineMain"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:text="@string/bottom_line"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:gravity="bottom|center"
      android:padding="8sp"/>

</LinearLayout>