<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center">
    
    <androidx.cardview.widget.CardView
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textview.MaterialTextView
                style="@style/Title"
                android:id="@+id/word_detail_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/word"
                android:textSize="20dp" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/Text"
                android:id="@+id/word_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textSize="20dp"
                android:text="Placeholder" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/Title"
                android:id="@+id/translation_detail_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/word_translation"
                android:textSize="20dp" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/Text"
                android:id="@+id/translation_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="Placeholder" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/Title"
                android:id="@+id/usage_example_detail_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/word_example"
                android:textSize="20dp" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/Text"
                android:id="@+id/usage_example_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="Placeholder" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/close_details_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OK"
                android:background="@drawable/custom_button"
                android:layout_gravity="center"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>